@@ -17,7 +17,7 @@ SET(LICENSE "<PRJ_LICENSE>")
 ####################################################################
 # Includes
 #
-SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/Modules)
+SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/Modules ${CMAKE_ROOT}/Modules )
 MESSAGE("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
 
 INCLUDE(ManageVersion)
@@ -37,7 +37,7 @@ INCLUDE(CMakeVersion)
 # Installing
 #
 
-SET(INSTALL_DOCS ${RELEASE_FILE} ChangeLog <LICENSE_DOCS>)
+SET(INSTALL_DOCS ${RELEASE_FILE} AUTHORS README ChangeLog COPYING TODO)
 STRING_JOIN(PRJ_DOC_LIST " " ${INSTALL_DOCS})
 
 INSTALL(FILES ${INSTALL_DOCS}
@@ -75,8 +75,8 @@ ENDIF(EXISTS ${MAINTAINER_SETTING})
 ####################################################################
 # Hosting
 #
-INCLUDE(UseHostingService)
-USE_HOSTING_SERVICE_READ_SETTING_FILE("${MAINTAINER_SETTING}"
+INCLUDE(ManageMaintainerTargets)
+MAINTAINER_SETTING_READ_FILE("${MAINTAINER_SETTING}"
     "${RPM_BUILD_SOURCES}/${PACK_SOURCE_FILE_NAME}")
 
 
